# pbs

./: .gitignore  Dockerfile.in  Makefile  Makefile.am  README  configure.ac  pakfire-manager  pakfire-master  pbs.conf.sample
.tx/: config
backend/: __init__.py  arches.py  base.py  bugtracker.py  build.py  builders.py  builds.py  cache.py  constants.py  database.py  distribution.py  logs.py  main.py  managers.py  messages.py  mirrors.py  misc.py  packages.py  repository.py  scheduler.py  sessions.py  settings.py  sources.py  updates.py  uploads.py  users.py
data/: schema.sql
data/static/css/: bootstrap-responsive.min.css  bootstrap.min.css  build-table.css  commits-table.css  jobs-table.css  style.css  style.css.backup
data/static/js/: pbs.js
data/templates/: advanced.html  base-form2.html  base.html  build-bugs.html  build-delete.html  build-detail.html  build-filter.html  build-index.html  build-list.html  build-manage.html  build-priority.html  build-queue.html  build-schedule-rebuild.html  build-schedule-test.html  build-state.html  builder-delete.html  builder-detail.html  builder-edit.html  builder-list.html  builder-new.html  builder-pass.html  builds-watchers-add.html  distro-detail.html  distro-edit.html  distro-list.html  distro-source-commit-detail.html  distro-source-commit-reset.html  distro-source-commits.html  distro-source-detail.html  distro-update-detail.html  distro-update-edit.html  docs-base.html  docs-build.html  docs-index.html  docs-users.html  docs-whatsthis.html  error-403.html  error-404.html  error-500.html  error.html  (+49 more)
data/templates/builders/: detail.html  edit.html  list.html  new.html  pass.html
data/templates/builds/: comments.html
data/templates/errors/: error.html
data/templates/modules/: bugs-table.html  build-headline.html  build-log.html  build-offset.html  build-state-warnings.html  build-table.html  build-table_old.html  comments-table.html  commits-table.html  files-table.html  footer.html  jobs-list.html  jobs-table.html  log-entry-comment.html  log-entry-small.html  log-entry.html  log-files-table.html  log-table.html  log.html  maintainer.html  modal-base.html  modal-build-comment.html  modal-build-unpush.html  package-files-table.html  package-header.html  package-table-detail.html  package-table.html  packages-files-table.html  packages-table.html  repo-actions-table.html  repository-table.html  source-table.html  updates-table.html  user-table.html  watchers-sidebar-table.html
data/translations/: pakfire.pot
hub/: __init__.py  handlers.py
manager/: __init__.py  bugs.py  builds.py  repositories.py  uploads.py
master/: __init__.py  handlers.py
po/: LINGUAS  POTFILES.in  da.po  de.po  es.po  fr.po  hu.po  it.po  km_KH.po  nl.po  pakfire-build-service.pot  pt_BR.po  pt_PT.po  ro_RO.po  ru.po  uk.po
src/: database.sql
src/buildservice/: __init__.py  __version__.py.in  arches.py  base.py  bugtracker.py  builders.py  builds.py  cache.py  constants.py  constants.py.in  database.py  decorators.py  distribution.py  geoip.py  git.py  jobqueue.py  jobs.py  keys.py  ldap.py  ldap_ipfire.py  logs.py  main.py  messages.py  mirrors.py  misc.py  packages.py  repository.py  scheduler.py  sessions.py  settings.py  sources.py  updates.py  uploads.py  users.py
src/crontab/: pakfire-build-service
src/hub/: __init__.py  handlers.py
src/manager/: __init__.py  base.py  bugs.py  builds.py  messages.py  repositories.py  sessions.py  sources.py  uploads.py
src/scripts/: pakfire-build-service  pakfire-hub  pakfire-manager  pakfire-web
src/static/css/: bootstrap.min.css  build-table.css  jobs-list.css  log.css  packages-files-table.css  packages-table.css  style.css  watchers-sidebar-table.css
src/static/images/: readme.txt
src/systemd/: pakfire-hub-1.service.in  pakfire-hub-2.service.in  pakfire-web-1.service.in  pakfire-web-2.service.in
src/templates/: base-form1.html  base.html  build-bugs.html  build-delete.html  build-detail.html  build-filter.html  build-index.html  build-list.html  build-priority.html  build-queue.html  build-schedule-test.html  build-state.html  builds-watchers-add.html  builds-watchers-list.html  distro-detail.html  distro-edit.html  distro-list.html  distro-source-commit-detail.html  distro-source-commit-reset.html  distro-source-commits.html  distro-source-detail.html  distro-update-detail.html  docs-base.html  docs-build.html  docs-index.html  docs-users.html  docs-whatsthis.html  file-detail.html  index.html  job-schedule-test.html  jobs-abort.html  jobs-buildroot.html  jobs-detail.html  jobs-filter.html  keys-delete.html  login.html  mirrors-detail.html  mirrors-edit.html  mirrors-list.html  mirrors-new.html  (+30 more)
src/templates/builders/: delete.html  detail.html  edit.html  list.html  new.html  pass.html
src/templates/errors/: error-400.html  error-403.html  error-404.html  error.html
src/templates/mirrors/: delete.html  detail.html  edit.html  list.html  new.html
src/templates/modules/: bugs-table.html  build-headline.html  build-offset.html  build-state-warnings.html  build-table.html  comments-table.html  commit-message.html  commits-table.html  footer.html  jobs-table.html  link-to-user.html  log-entry-comment.html  log-entry-small.html  log-entry.html  log-files-table.html  log-table.html  log.html  maintainer.html  modal-base.html  text.html  (+11 more)
src/tools/: dump-database-schema.sh  update-geoip-database.sh
src/web/: __init__.py  api.py  auth.py  base.py  builders.py  builds.py  distributions.py  errors.py  handlers.py  handlers_api.py  handlers_auth.py  handlers_base.py  handlers_builders.py  handlers_builds.py  handlers_distro.py  handlers_jobs.py  handlers_keys.py  handlers_mirrors.py  handlers_packages.py  handlers_search.py  handlers_updates.py  handlers_users.py  jobs.py  keys.py  mirrors.py  packages.py  search.py  ui_modules.py  updates.py  users.py
web/: __init__.py  handlers.py  handlers_auth.py  handlers_base.py  handlers_builders.py  handlers_builds.py  handlers_jobs.py  handlers_mirrors.py  handlers_packages.py  handlers_search.py  handlers_users.py  ui_modules.py
(+40 files in other folders)
